# cvc4-http-server

./: .editorconfig  .travis.yml  Dockerfile  README.md  meson.build
src/: gexcept.hpp  main.cpp  meson.build  refptr.hpp  request.hpp  server.cpp  server.hpp  solver.cpp  solver.hpp  soup_stream.hpp  threadpool.hpp
test/: integration.sh
test/data/: test1.smt
